crates/rulesteward-fapolicyd/tests/snapshots/fapd-W10__allow-then-deny.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
files=2
diagnostics=1
[fapd-W10] sev=Warning line=3 col=1 span=156..188 file=rules.d/30-deny.rules :: deny rule unreachable: the allow with the same match predicates in rules.d/20-allow.rules on line 3 already matched and terminated evaluation
